--- a/Linear and tree based methods.ipynb
+++ b/Linear and tree based methods.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "id": "95c319df",
    "metadata": {},
-   "source": [
-    "### DS5220: Supervised Machine Learning and Learning Theory                                                                      (Fall 2022)\n",
-    "\n",
-    "  # Problem Set 3"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "ed0db960",
    "metadata": {},
    "source": [
-    "Submitted by: Pritish Arora (002781425)"
+    "### Supervised Machine Learning and Learning Theory"
    ]
   },
   {
